hovers working now

--- a/chrome/css/main.css
+++ b/chrome/css/main.css
@@ -16,3 +16,11 @@
     border: 0;
     width: 100%;
 }
+
+#ext-link-viewer iframe {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    width: 100%;
+    height: 100%;
+}
