youtube videos work, popup centered

--- a/chrome/css/main.css
+++ b/chrome/css/main.css
@@ -1,8 +1,18 @@
-#ext-link-viewer {
-    position: absolute;
-    max-width: 600px;
+#link-previewer-container {
+    position: fixed;
     z-index: 999999999;
     display: none;
+    background: rgba(255, 255, 255, 0.5);
+    top:0; bottom:0; left:0; right:0;
+    overflow: auto;
+}
+
+#link-previewer {
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    max-width: 600px;
+    height: auto;
     padding: 5px;
     border: 1px solid #D1D1D1;
     background-color: #FFF;
@@ -10,14 +20,14 @@
     box-shadow: 0 2px 12px rgba(0, 0, 0, 0.21);
 }
 
-#ext-link-viewer img {
+#link-previewer img {
     margin: 0;
     padding: 0;
     border: 0;
     width: 100%;
 }
 
-#ext-link-viewer iframe {
+#link-previewer iframe {
     margin: 0;
     padding: 0;
     border: 0;
