--- a/chrome/css/main.css
+++ b/chrome/css/main.css
@@ -1,4 +1,7 @@
+
+
 #link-previewer-container {
+    font-family: sans-serif;
     position: fixed;
     z-index: 999999999;
     display: none;
@@ -34,4 +37,12 @@
     border: 0;
     width: 100%;
     height: 100%;
+}
+
+#link-previewer .error {
+    text-align: center;
+    color:#DDD;
+    font-weight: bold;
+    padding-top: 200px;
+    font-size: 30px;
 }
