--- a/chrome/css/main.css
+++ b/chrome/css/main.css
@@ -43,7 +43,7 @@
     text-align: center;
     color:#DDD;
     font-weight: bold;
-    padding-top: 200px;
+    padding-top: 150px;
     font-size: 30px;
 }
 
@@ -53,4 +53,12 @@
     font-weight: bold;
     padding-top: 50px;
     font-size: 25px;
+}
+
+#link-previewer .loading {
+    text-align: center;
+    font-size: 40px;
+    color: #DBDBDB;
+    padding-top: 15%;
+    font-weight: bold;
 }
